--- a/javaProject/Test/pom.xml
+++ b/javaProject/Test/pom.xml
@@ -83,6 +83,12 @@
             <version>1.8.9</version>
         </dependency>
 
+        <!--netty-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>5.0.0.Alpha2</version>
+        </dependency>
 
 
 
